attribut for dans le form - amélioration des contrasts - correction mots clés - focus sur liens

--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ button {
     outline: none!important;
 }
 
-a:hover {
+a:hover{
     text-decoration: none;
     cursor: pointer;
+}
+a:focus{
+   border: 1px solid black;
 }
 
 #page-loading-blocs-notifaction {
@@ -753,7 +756,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(115, 111, 104, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -771,15 +774,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #C14F1C;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #C14F1C;
     color: #FFFFFF!important;
 }
 
@@ -797,7 +800,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #C14F1C!important;
 }
 
 .ltc-atomic-tangerine:hover {
@@ -822,7 +825,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
@@ -1040,3 +1043,17 @@ h4 {
         text-align: center;
     }
 }
+
+.services {
+    font-size: 2rem;
+    padding: 0 22%;
+}
+
+.citation{
+    font-size: 2rem;
+}
+
+.citation+p{
+    font-size: 1.5rem;
+}
+
